ATLAS-2832: Validate and prefill to_be_completed for platform